--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,29 +3,28 @@
 
 </head>
 <body>
-<h2>Login</h2>
+<br>
+<br>
+<br>
+<div class="container container-table input-group input-group-sm">
 <form>
   <div class="form-group">
-    <label>Username</label>
-    <input type="text" formControlName="username" class="form-control" />
-    <div  class="invalid-feedback">
-      <div>Username is required</div>
-    </div>
+    <h2>Login</h2>
   </div>
   <div class="form-group">
-    <label>Password</label>
-    <input type="password" formControlName="password" class="form-control" />
-    <div  class="invalid-feedback">
-      <div>Password is required</div>
-    </div>
+    <input type="email" formControlName="email" class="form-control input-sm" required placeholder="E-mail"/>
   </div>
   <div class="form-group">
+    <input type="password" formControlName="password" class="form-control" required placeholder="Password"/>
+  </div>
+  <div class="form-group text-center">
     <button class="btn btn-primary">
       <span  class="spinner-border-sm mr-1"></span>
       Login
     </button>
-    <a routerLink="/register" class="btn btn-link">Register</a>
+
   </div>
 </form>
+</div>
 </body>
 </html>
