--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -7,45 +7,54 @@
 <br>
 <br>
 <div class="container container-table input-group input-group-sm">
-  <form>
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
     <h2>Registration</h2>
     </div>
     <div class="form-group">
-      <input type="text" formControlName="firstname" class="form-control" required placeholder="First Name"/>
+      <input type="text" [ngModelOptions]="{standalone: true}" id="firstname" class="form-control" required placeholder="First Name"
+      [(ngModel)]="user.firstName"/>
     </div>
     <div class="form-group">
-      <input type="text" formControlName="lastname" class="form-control" required placeholder="Last Name"/>
+      <input type="text" [ngModelOptions]="{standalone: true}" id="lastname" class="form-control" required placeholder="Last Name"
+      [(ngModel)]="user.lastName"/>
     </div>
     <div class="form-group">
-      <input type="email" formControlName="email" class="form-control" required placeholder="E-mail"/>
+      <input type="email" [ngModelOptions]="{standalone: true}" id="email" class="form-control" required placeholder="E-mail"
+             [(ngModel)]="user.email"/>
     </div>
 
     <div class="form-group">
-      <input type="password" formControlName="password" class="form-control" required placeholder="Password"/>
+      <input type="password" [ngModelOptions]="{standalone: true}" id="password" class="form-control" required placeholder="Password"
+             [(ngModel)]="user.password"/>
     </div>
 
     <div class="form-group">
-      <input type="password" formControlName="repeatpassword" class="form-control" required placeholder="Confirm password"/>
+      <input type="password" [ngModelOptions]="{standalone: true}" id="repeatpassword" class="form-control" required placeholder="Confirm password"
+             [(ngModel)]="repeatedPassword"/>
     </div>
     <div class="form-group">
-      <input required type="text" formControlName="address" class="form-control" placeholder="Address" />
+      <input required type="text" [ngModelOptions]="{standalone: true}" id="address" class="form-control" placeholder="Address"
+             [(ngModel)]="user.address"/>
     </div>
     <div class="form-group">
-      <input type="text" formControlName="city" class="form-control" required placeholder="City" />
+      <input type="text" [ngModelOptions]="{standalone: true}" id="city" class="form-control" required placeholder="City"
+             [(ngModel)]="user.city"/>
     </div>
     <div class="form-group">
-      <input type="text" formControlName="country" class="form-control" required placeholder="Country" />
+      <input type="text" [ngModelOptions]="{standalone: true}" id="country" class="form-control" required placeholder="Country"
+             [(ngModel)]="user.country"/>
     </div>
     <div class="form-group">
-      <input type="text" formControlName="ssn" class="form-control" placeholder="SSN"/>
+      <input type="text" [ngModelOptions]="{standalone: true}" id="phoneNumber" class="form-control" placeholder="Phone Number"
+             [(ngModel)]="user.phoneNumber"/>
     </div>
-
+    <div class="form-group">
+      <input type="text" [ngModelOptions]="{standalone: true}" id="ssn" class="form-control" placeholder="SSN"
+             [(ngModel)]="user.ssn"/>
+    </div>
     <div class="form-group text-center">
-      <button class="btn btn-primary">
-        <span  class="spinner-border-sm mr-1"></span>
-        Sign Up
-      </button>
+      <input type="submit" class="form-control" value="Sign Up" />
     </div>
   </form>
 </div>
