--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-
 </head>
+
 <body>
+
 <br>
 <br>
 <br>
@@ -54,7 +55,7 @@
              [(ngModel)]="user.ssn"/>
     </div>
     <div class="form-group text-center">
-      <input type="submit" class="form-control" value="Sign Up" />
+      <input type="submit" class="btn btn-success form-control" value="Sign Up" />
     </div>
   </form>
 </div>
