--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/registration">Registration</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/requests">Requests</a>
+        </li>
 
       </ul>
     </div>
