--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,22 +7,20 @@
 <br>
 <br>
 <div class="container container-table input-group input-group-sm">
-<form>
+<form (ngSubmit)="onSubmit()">
   <div class="form-group">
     <h2>Login</h2>
   </div>
   <div class="form-group">
-    <input type="email" formControlName="email" class="form-control input-sm" required placeholder="E-mail"/>
+    <input type="email" [ngModelOptions]="{standalone: true}" id="email" class="form-control input-sm" required placeholder="E-mail"
+           [(ngModel)]="email"/>
   </div>
   <div class="form-group">
-    <input type="password" formControlName="password" class="form-control" required placeholder="Password"/>
+    <input type="password" [ngModelOptions]="{standalone: true}" id="password" class="form-control" required placeholder="Password"
+           [(ngModel)]="password"/>
   </div>
   <div class="form-group text-center">
-    <button class="btn btn-primary">
-      <span  class="spinner-border-sm mr-1"></span>
-      Login
-    </button>
-
+    <input type="submit" class="form-control" value="Login"/>
   </div>
 </form>
 </div>
