--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
            [(ngModel)]="password"/>
   </div>
   <div class="form-group text-center">
-    <input type="submit" class="form-control" value="Login"/>
+    <button type="submit" class="btn btn-success">Log in </button>
   </div>
 </form>
 </div>
