--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -22,8 +22,10 @@
     <td>{{user.lastName}}</td>
     <td>{{user.email}}</td>
     <td><button class="btn badge-success">Accept</button></td>
-    <td><button class="btn badge-danger">Decline</button></td>
+    <td><button class="btn badge-danger" (click)="decline_request(user.email)">Decline</button></td>
   </tr>
 </table>
+<h3>Rejection explanation:</h3>
+<textarea [(ngModel)]="emailContent" cols="40" rows="5"></textarea>
 </body>
 </html>
