all of the clinical center administrator pages formed (Register Clinic and Clinic's admin, Administrators profile)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,41 @@
           <a class="nav-link" routerLink="/registration">Registration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/requests">Requests</a>
+         <a class="nav-link" routerLink="/requests">Requests</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/ccadmin">Register Clinic Admin</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/registerClinic">Register clinic</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/ccadminInfo">CCA Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/ccadminPass">Change Password</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/ccadminDrug">Add drug</a>
+        </li>
+
+
+        <!--<li class="nav-item dropdown" routerLinkActive="active">
+          <a class="nav-link dropdown-toggle" id = "navbarDropDown" role = "button">
+          Admin Page
+        </a>
+          <div class="dropdown-menu" role="navigation" aria-labelledby="navbarDropDown">
+            <a class = "dropdown-item" routerLink="/ccadmin">Admin's home page</a>
+            <a class = "dropdown-item" routerLink="/requests">Register requests</a>
+            <a class="dropdown-item">Add admin</a>
+
+
+            <a class = "dropdown-item" routerLink="/ccadmin">Add new clinic</a>
+            <a class = "dropdown-item" routerLink="/ccadmin">Add new clinic admin</a>
+
+
+          </div>
+        </li>-->
 
       </ul>
     </div>
