--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -10,7 +10,7 @@
 <div class="container container-table input-group input-group-sm">
   <form (ngSubmit)="onSubmit()" [formGroup]="angForm">
     <div class="form-group">
-    <h2>Registration</h2>
+    <h2 style="color:#33cabb">Registration</h2>
     </div>
 
     <div class="form-group">
