--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,7 +9,7 @@
 <div class="container container-table input-group input-group-sm">
 <form (ngSubmit)="onSubmit()">
   <div class="form-group">
-    <h2>Login</h2>
+    <h2 style="color:#33cabb">Login</h2>
   </div>
   <div class="form-group">
     <input type="email" [ngModelOptions]="{standalone: true}" id="email" class="form-control input-sm" required placeholder="E-mail"
