--- a/src/app/users/ccadminregisterclinic.component.html
+++ b/src/app/users/ccadminregisterclinic.component.html
@@ -38,25 +38,27 @@
   </div>-->
 
 <div class="container container-table input-group input-group-sm">
-  <form (ngSubmit)="onSubmit()" [formGroup]="angForm">
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <h2 style="color:#33cabb">Clinic registration</h2>
     </div>
 
     <div class="form-group">
-      <input type="text" formControlName="clinicName" id="clinicName" class="form-control"
+      <input type="text" id="clinicName" class="form-control"
              placeholder="Clinic Name"
-             [(ngModel)]="clinic.clinicName"/>
+             [(ngModel)]="clinic.clinicName"
+             [ngModelOptions]="{standalone: true}"/>
     </div>
 
     <div class="form-group">
-      <input type="text" formControlName="address" id="address" class="form-control"
+      <input type="text" id="address" class="form-control"
              placeholder="Address"
-             [(ngModel)]="clinic.address"/>
+             [(ngModel)]="clinic.address"
+             [ngModelOptions]="{standalone: true}"/>
     </div>
 
     <div class="form-group text-center">
-      <button class="btn btn-success">Register</button>
+      <button type="submit" class="btn btn-success">Register</button>
     </div>
   </form>
 </div>
