--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,10 +29,10 @@
         <li class="nav-item"  hidden="true">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
-        <li class="nav-item"  hidden="true">
+        <li class="nav-item" >
           <a class="nav-link" routerLink="/registration">Registration</a>
         </li>
-        <li class="nav-item"  hidden="true">
+        <li class="nav-item">
          <a class="nav-link" routerLink="/requests">Requests</a>
         </li>
         <li class="nav-item">
