--- a/src/app/requests/requests.component.html
+++ b/src/app/requests/requests.component.html
@@ -21,7 +21,7 @@
     <td>{{user.firstName}}</td>
     <td>{{user.lastName}}</td>
     <td>{{user.email}}</td>
-    <td><button class="btn badge-success">Accept</button></td>
+    <td><button class="btn badge-success" (click)="accept_request(user.email)">Accept</button></td>
     <td><button class="btn badge-danger" (click)="decline_request(user.email)">Decline</button></td>
   </tr>
 </table>
