adding drugs and showing list of added drugs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -47,7 +47,7 @@
         <li class="nav-item"  hidden="true">
           <a class="nav-link" routerLink="/ccadminPass">Change Password</a>
         </li>
-        <li class="nav-item" hidden="true">
+        <li class="nav-item">
           <a class="nav-link" routerLink="/ccadminDrug">Add drug</a>
         </li>
 
