--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
         <li class="nav-item" hidden="true">
           <a class="nav-link" routerLink="/">Home</a>
         </li>
-        <li class="nav-item"  hidden="true">
+        <li class="nav-item" >
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
         <li class="nav-item" >
