--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -119,18 +119,23 @@
                 <input type="text" class="form-control" formControlName="firstname" placeholder="First Name *" value=""
                        [(ngModel)]="user1.firstName"
                        [ngClass]="{'is-invalid': (f.firstname.dirty || f.firstname.touched) && f.firstname.errors, 'is-valid': (f.firstname.dirty || f.firstname.touched) && f.firstname.valid}"/>
+                <span class="text-danger" *ngIf="f.firstname.errors && (f.firstname.dirty || f.firstname.touched)"> First name is required </span>
+
               </div>
               <div class="form-group">
                 <input type="text" class="form-control" formControlName="lastname" placeholder="Last Name *" value=""
                        [(ngModel)]="user1.lastName"
                        [ngClass]="{'is-invalid': (f.lastname.dirty || f.lastname.touched) && f.lastname.errors, 'is-valid': (f.lastname.dirty || f.lastname.touched) && f.lastname.valid}"
                 />
+                <span class="text-danger" *ngIf="f.lastname.errors && (f.lastname.dirty || f.lastname.touched)">Last name is required</span>
+
               </div>
               <div class="form-group">
                 <input type="password" class="form-control"  formControlName="password" placeholder="Password *" value=""
                        [(ngModel)]="user1.password"
                        [ngClass]="{'is-invalid': (f.password.dirty || f.password.touched) && f.password.errors, 'is-valid': (f.password.dirty || f.password.touched) && f.password.valid}"
                 />
+                <span class="text-danger" *ngIf="f.password.errors && (f.password.dirty || f.password.touched)">Password must contains minimum 6 charachters</span>
               </div>
               <div class="form-group">
                 <input type="password" class="form-control" formControlName="repeatpassword" placeholder="Confirm Password *" value=""
@@ -138,6 +143,7 @@
                        [ngClass]="{'is-invalid': (f.repeatpassword.dirty || f.repeatpassword.touched) && checkPassword, 'is-valid': (f.repeatpassword.dirty || f.repeatpassword.touched) && f.repeatpassword.valid && !checkPassword}"
 
                 />
+                <span class="text-danger" *ngIf="(f.repeatpassword.dirty || f.repeatpassword.touched) && checkPassword">Passwords must match</span>
               </div>
               <div class="form-group"></div>
             </div>
@@ -146,25 +152,29 @@
                 <input type="email" formControlName="email" class="form-control" placeholder="Your Email *"
                        [(ngModel)]="user1.email"
                        [ngClass]="{'is-invalid': (f.email.dirty || f.email.touched) && f.email.errors, 'is-valid': (f.email.dirty || f.email.touched) && f.email.valid}"
-                />
+               /> <span class="text-danger" *ngIf="f.email.errors && (f.email.dirty || f.email.touched)">Email must be a valid email address</span>
+
+
               </div>
               <div class="form-group">
                 <input type="text"  name="txtEmpPhone" formControlName="phonenumber" class="form-control" pattern="[0-9]+" placeholder="Your Phone *" value=""
                        [(ngModel)]="user1.phoneNumber"
                        [ngClass]="{'is-invalid': (f.phonenumber.dirty || f.phonenumber.touched) && f.phonenumber.errors, 'is-valid': (f.phonenumber.dirty || f.phonenumber.touched) && f.phonenumber.valid}"
                 />
+                <span class="text-danger" *ngIf="f.phonenumber.errors && (f.phonenumber.dirty || f.phonenumber.touched)">Phone number must contains 9 or 10 digits</span>
               </div>
               <div class="form-group">
                 <input type="text" formControlName="ssn" name="ssn" class="form-control" pattern="[0-9]+" placeholder="SSN *" required
                        [(ngModel)]="user1.ssn"
                        [ngClass]="{'is-invalid': (f.ssn.dirty || f.ssn.touched) && f.ssn.errors, 'is-valid': (f.ssn.dirty || f.ssn.touched) && f.ssn.valid}"
                 />
+                <span class="text-danger" *ngIf="f.ssn.errors && (f.ssn.dirty || f.ssn.touched)">SSN must containts 13 digits</span>
               </div>
               <div class="form-group">
                 <input type="text" formControlName="address" class="form-control" placeholder="Enter Your Address *"
                        [(ngModel)]="user1.address"
                        [ngClass]="{'is-invalid': (f.address.dirty || f.address.touched) && f.address.errors, 'is-valid': (f.address.dirty || f.address.touched) && f.address.valid}"/>
-
+                <span class="text-danger" *ngIf="f.address.errors && (f.address.dirty || f.address.touched)">Address is required</span>
               </div>
 
               <button [disabled]="angForm.invalid || angForm.pristine || checkPassword" type="subbmit" class="btnRegister"> Sign Up </button>
