functionality is showed accordant logged in user's role

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,6 +105,9 @@
               <button role="button" (click)="showRegistration()" class="text-info">Register here</button>
             </div>
           </form>
+          <div>
+            <p *ngIf="activateinfo" class="text-info">Please, activate your account before login!</p>
+          </div>
         </div>
       </div>
     </div>
