--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,6 +50,33 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/ccadminDrug">Add drug</a>
         </li>
+        <!--Staff-->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/editStaff">Edit staff's info</a>
+        </li>
+        <!--Patient-->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/selectClinic">Select clinic</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/historyPatient">History of examination</a>
+        </li>
+        <!--Doctor-->
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/workCalendar">Work Calendar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/holidayAbsence">Holiday/Absence</a>
+        </li>
+
+        <li class="nav-item">
+        <a class="nav-link" routerLink="/booking">Booking</a>
+      </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/listOfPatients">All Patients</a>
+        </li>
+
+
 
 
 
@@ -58,6 +85,9 @@
     </div>
   </nav>
 </div>
+
+
+
 
 </body>
 </html>
@@ -69,3 +99,4 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <router-outlet></router-outlet>
+
